--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,14 @@
 // Navigation Styles here
+
+.nav-bar {
+    .center ();
+    border-bottom: 2px dashed silver;
+        
+        nav a{
+         text-decoration: none;
+         color: black;
+         font-size: 1.6rem;
+         padding-left: 2rem;
+         padding-right: 2rem;
+         }
+}
