created the header, one mix-in, and one variable

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,11 @@
 .home {
+  font-weight: bold;
+
+  .main-header {
+    margin-top:2rem;
+    border-bottom:@border-line;
+  }
+
 
   .content-section {
     margin: 30px 0;
@@ -6,9 +13,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
-    .text-content {
+   .text-content {
       width: 48%;
       padding-right: 1%;
     }
