--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,8 +3,12 @@
 .nav-bar {
     .center ();
     border-bottom: 2px dashed silver;
-        
-        nav a{
+    margin-top: 2rem;
+    padding-bottom: 2rem;
+    font-weight: bold;
+    
+   
+         nav a{
          text-decoration: none;
          color: black;
          font-size: 1.6rem;
