--- a/css/index.css
+++ b/css/index.css
@@ -174,6 +174,9 @@ img {
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px dashed silver;
+  margin-top: 2rem;
+  padding-bottom: 2rem;
+  font-weight: bold;
 }
 .nav-bar nav a {
   text-decoration: none;
@@ -192,6 +195,13 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home {
+  font-weight: bold;
+}
+.home .main-header {
+  margin-top: 2rem;
+  border-bottom: 2px dashed #C0C0C0;
 }
 .home .content-section {
   margin: 30px 0;
