created a btn mix-in and stylized the button. Started my media queries

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,6 @@
 .home {
-  font-weight: bold;
+
+    font-weight: bold;
 
   .main-header {
     margin-top:2rem;
@@ -62,5 +63,9 @@
       width: 30%;
       margin-bottom: 30px;
     }
+
+    .btn { 
+      .sign-btn ()
+  }
   }
 }// home
