--- a/css/index.css
+++ b/css/index.css
@@ -249,3 +249,13 @@ img {
   width: 30%;
   margin-bottom: 30px;
 }
+.home .content-pick .btn {
+  width: 20rem;
+  height: 4.5rem;
+  color: white;
+  font-size: 1.8rem;
+  background-color: #008080;
+  text-align: center;
+  padding-top: 1.3rem;
+  border-radius: 1.5rem;
+}
