--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,4 +5,16 @@
     flex-flow: @flow;
     justify-content: @justify;
     align-items: @align;
-}
+};
+
+.sign-btn () {
+
+      width: 20rem;
+      height: 4.5rem;
+      color:white;
+      font-size: 1.8rem;
+      background-color: #008080;
+      text-align: center;
+      padding-top: 1.3rem;
+      border-radius: 1.5rem;
+  };
