finshed the nav, header, and content of media queries

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,4 +15,12 @@
          padding-left: 2rem;
          padding-right: 2rem;
          }
+
+    @media @mobile {
+        .center (column wrap,space-between ,center);
+
+        h1 {
+            margin-bottom: 1rem;
+        }
+    }
 }
