--- a/css/index.css
+++ b/css/index.css
@@ -185,6 +185,17 @@ img {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+@media (max-width:510px) {
+  .nav-bar {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav-bar h1 {
+    margin-bottom: 1rem;
+  }
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -203,21 +214,83 @@ img {
   margin-top: 2rem;
   border-bottom: 2px dashed #C0C0C0;
 }
+@media (max-width:510px) {
+  .home .main-header {
+    width: 90%;
+  }
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width:510px) {
+  .home .content-section {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
+}
+@media (max-width:510px) {
+  .home .content-section .text-content {
+    width: 90%;
+  }
 }
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
+@media (max-width:510px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding-left: 5%;
+  }
+}
 .home .content-section .img-content img {
+  border-radius: 10px;
+}
+.home .content-section-inverse-content {
+  margin: 30px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border-bottom: 2px dashed #C0C0C0;
+  padding-bottom: 2rem;
+}
+@media (max-width:510px) {
+  .home .content-section-inverse-content {
+    display: flex;
+    flex-flow: column-reverse wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.home .content-section-inverse-content .text-content {
+  width: 48%;
+  padding-right: 1%;
+}
+@media (max-width:510px) {
+  .home .content-section-inverse-content .text-content {
+    width: 90%;
+  }
+}
+.home .content-section-inverse-content .img-content {
+  width: 48%;
+  padding-left: 1%;
+}
+@media (max-width:510px) {
+  .home .content-section-inverse-content .img-content {
+    width: 100%;
+    padding-left: 5%;
+  }
+}
+.home .content-section-inverse-content .img-content img {
   border-radius: 10px;
 }
 .home .inverse-content {
