--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,10 @@
   .main-header {
     margin-top:2rem;
     border-bottom:@border-line;
+
+    @media @mobile {
+      width: 90%;
+    }
   }
 
 
@@ -14,14 +18,28 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @media @mobile {
+      .center (column wrap, center, center);
+    }
+
    .text-content {
       width: 48%;
       padding-right: 1%;
+
+       @media @mobile {
+         width: 90%;
+       }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+       @media @mobile {
+         width: 100%;
+         padding-left: 5%;
+         
+       }
 
       img {
         border-radius: 10px;
@@ -29,9 +47,48 @@
     }
   }
 
+  .content-section-inverse-content{
+    margin: 30px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border-bottom: @border-line;
+    padding-bottom: 2rem;
+
+    @media @mobile {
+      .center (column-reverse wrap, center, center);
+    }
+
+    .text-content {
+      width: 48%;
+      padding-right: 1%;
+
+      @media @mobile {
+         width: 90%;
+       }
+    }
+
+    .img-content {
+      width: 48%;
+      padding-left: 1%;
+
+      @media @mobile {
+         width: 100%;
+         padding-left: 5%;
+         
+       }
+
+      img {
+        border-radius: 10px;
+      }
+    }
+  }
+
+
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+   
 
     .text-content {
       padding-left: 1%;
@@ -64,8 +121,8 @@
       margin-bottom: 30px;
     }
 
-    .btn { 
-      .sign-btn ()
+    .btn {
+.sign-btn ();
   }
   }
 }// home
