--- a/css/index.css
+++ b/css/index.css
@@ -249,53 +249,23 @@ img {
 @media (max-width:510px) {
   .home .content-section .img-content {
     width: 100%;
-    padding-left: 5%;
+    padding-left: 10%;
   }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
 }
-.home .content-section-inverse-content {
-  margin: 30px 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+.home .inverse-content {
+  padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
-  padding-bottom: 2rem;
 }
 @media (max-width:510px) {
-  .home .content-section-inverse-content {
+  .home .inverse-content {
     display: flex;
     flex-flow: column-reverse wrap;
     justify-content: center;
     align-items: center;
   }
-}
-.home .content-section-inverse-content .text-content {
-  width: 48%;
-  padding-right: 1%;
-}
-@media (max-width:510px) {
-  .home .content-section-inverse-content .text-content {
-    width: 90%;
-  }
-}
-.home .content-section-inverse-content .img-content {
-  width: 48%;
-  padding-left: 1%;
-}
-@media (max-width:510px) {
-  .home .content-section-inverse-content .img-content {
-    width: 100%;
-    padding-left: 5%;
-  }
-}
-.home .content-section-inverse-content .img-content img {
-  border-radius: 10px;
-}
-.home .inverse-content {
-  padding-bottom: 30px;
-  border-bottom: 2px dashed #C0C0C0;
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -305,6 +275,12 @@ img {
   padding-right: 1%;
   padding-left: 0;
 }
+@media (max-width:510px) {
+  .home .inverse-content .img-content {
+    width: 100%;
+    padding-left: 10%;
+  }
+}
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
@@ -312,18 +288,36 @@ img {
 .home .content-destination img {
   border-radius: 10px;
 }
+@media (max-width:510px) {
+  .home .content-destination img {
+    width: 100%;
+  }
+}
 .home .content-pick {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
 }
+@media (max-width:510px) {
+  .home .content-pick {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
+@media (max-width:510px) {
+  .home .content-pick .destination {
+    width: 70%;
+  }
+}
 .home .content-pick .btn {
-  width: 20rem;
+  width: 90%;
   height: 4.5rem;
   color: white;
   font-size: 1.8rem;
@@ -331,4 +325,9 @@ img {
   text-align: center;
   padding-top: 1.3rem;
   border-radius: 1.5rem;
+}
+@media (max-width:510px) {
+  .home .content-pick .btn {
+    background-color: #16A2B8;
+  }
 }
