--- a/less/mixins.less
+++ b/less/mixins.less
@@ -17,4 +17,9 @@
       text-align: center;
       padding-top: 1.3rem;
       border-radius: 1.5rem;
-  };
+
+       &:hover {
+     background-color: lighten(#008080, 10%)
+   }
+
+     };
