--- a/less/variables.less
+++ b/less/variables.less
@@ -17,4 +17,6 @@
 @border-line: 2px dashed @silver;
 
 //Media Queries
-@mobile: ~"(max-width:510px)";
+@mobile: ~"(max-width:500px)";
+
+@desktop: ~"(max-width:1000px";
