--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,3 @@
-// Navigation Styles here
-
 .nav-bar {
     .center ();
     max-width: 925px;
@@ -35,3 +33,34 @@
         }
     }
 }
+.nav-bar {
+animation-name: color;
+animation-duration: 10s;
+}
+
+@keyframes color {
+0% {
+background-color: white;
+}
+20% {
+background-color: #B1D8AE;
+}
+40% {
+background-color:#73B9BB;
+}
+60% {
+background-color: #8EBEBF;
+}
+80% {
+background-color: #ECF8F8;
+}
+100% {
+background-color: white;
+}
+
+}
+
+
+
+
+
