--- a/css/index.css
+++ b/css/index.css
@@ -204,6 +204,30 @@ img {
     margin-left: 3rem;
   }
 }
+.nav-bar {
+  animation-name: color;
+  animation-duration: 10s;
+}
+@keyframes color {
+  0% {
+    background-color: white;
+  }
+  20% {
+    background-color: #B1D8AE;
+  }
+  40% {
+    background-color: #73B9BB;
+  }
+  60% {
+    background-color: #8EBEBF;
+  }
+  80% {
+    background-color: #ECF8F8;
+  }
+  100% {
+    background-color: white;
+  }
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -345,9 +369,6 @@ img {
     background-color: #117a8a;
   }
 }
-.home .package-form {
-  border-top: 2px dashed #C0C0C0;
-}
 .home .contact-form {
   display: flex;
   flex-flow: column wrap;
@@ -391,6 +412,58 @@ img {
     background-color: #16A2B8;
   }
   .home .contact-form .submit:hover {
+    background-color: #117a8a;
+  }
+}
+.home .package-form {
+  border-top: 2px dashed #C0C0C0;
+}
+.home .package-form .contact-form {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+}
+.home .package-form .contact-form h2 {
+  margin-top: 2rem;
+}
+.home .package-form .contact-form .form-control {
+  width: 35rem;
+  height: 5rem;
+  margin-bottom: 1.5rem;
+  margin-top: 1rem;
+  border-radius: 0.7rem;
+  background-color: #F5F5F5;
+  border: none;
+}
+.home .package-form .contact-form .textarea {
+  width: 35rem;
+  height: 10rem;
+  background-color: #F5F5F5;
+  border: none;
+}
+.home .package-form .contact-form .submit {
+  width: 90%;
+  height: 4.5rem;
+  color: white;
+  font-size: 1.8rem;
+  background-color: #008080;
+  text-align: center;
+  padding-top: 1.3rem;
+  border-radius: 1.5rem;
+  padding-bottom: 1.5rem;
+  font-weight: bold;
+  margin-left: 1rem;
+}
+.home .package-form .contact-form .submit:hover {
+  background-color: #00b3b3;
+}
+@media (max-width:500px) {
+  .home .package-form .contact-form .submit {
+    background-color: #16A2B8;
+  }
+  .home .package-form .contact-form .submit:hover {
     background-color: #117a8a;
   }
 }
